--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -66,7 +66,7 @@ jobs:
             && docker system prune -af
 
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: [ test ]
     steps:
       - name: Set ssh key
